codex-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__app_server_mcp_startup_failure_renders_warning_history.snap
---
source: tui/src/chatwidget/tests/mcp_startup.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---

╭───────────────────────────────────────╮
│ >_ OpenAI DarwinCode (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯


  gpt-5.3-darwin-code default · /tmp/project
