codex-rs/tui/src/chatwidget/snapshots/darwin_code_tui__chatwidget__tests__approval_modal_patch.snap
---
source: tui/src/chatwidget/tests/exec_flow.rs
expression: terminal.backend().vt100().screen().contents()
---

╭───────────────────────────────────────╮
│ >_ OpenAI DarwinCode (v0.0.0)         │
│                                       │
│ model:     loading   /model to change │
│ directory: /tmp/project               │
╰───────────────────────────────────────╯


  Would you like to make the following edits?

  Reason: The model wants to apply changes

  README.md (+2 -0)

    1 +hello
    2 +world

› 1. Yes, proceed (y)
  2. Yes, and don't ask again for these files (a)
  3. No, and tell DarwinCode what to do differently (esc)

  Press enter to confirm or esc to cancel
